refactor(result): LottoResultEntity 구조 단순화 및 purchasedNumbers 파싱 방식 개선
- JSON 문자열 저장 방식 제거하고 VARCHAR 기반 단순 문자열 저장으로 변경
- 숫자 파싱 로직을 Arrays.stream 기반으로 개선
- 불필요한 Builder, AllArgsConstructor 제거하여 엔티티 가독성 및 JPA 규칙 준수
- 상수(NUMBER_DELIMITER) 추가로 매직 스트링 제거