@@ -1,20 +1,24 @@
 package com.lotto.lotto_result_service.domain.entity;
 
-import jakarta.persistence.*;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
-
-import java.util.List;
 
 @Entity
 @Table(name = "lotto_results")
 @Getter
-@Builder
 @NoArgsConstructor
-@AllArgsConstructor
 public class LottoResultEntity {
+
+    private static final String NUMBER_DELIMITER = ",";
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -26,7 +30,7 @@ public class LottoResultEntity {
     @Column(nullable = false)
     private Long purchaseId;
 
-    @Column(nullable = false, columnDefinition = "JSON")
+    @Column(nullable = false, columnDefinition = "VARCHAR(50)")
     private String purchasedNumbers;
 
     @Column(nullable = false)
@@ -36,20 +40,15 @@ public class LottoResultEntity {
     private Boolean bonusMatch;
 
     @Column(nullable = false)
-    private Integer rankValue; // 1~5등, 0은 꽝
+    private Integer rankValue;
 
     @Column(nullable = false)
     private Long prizeAmount;
 
     public List<Integer> getPurchasedNumberList() {
-        return List.of(purchasedNumbers.replace("[", "").replace("]", "")
-                .split(",")).stream()
+        return Arrays.stream(purchasedNumbers.split(NUMBER_DELIMITER))
                 .map(String::trim)
                 .map(Integer::parseInt)
-                .toList();
-    }
-
-    public void setPurchasedNumbers(List<Integer> numbers) {
-        this.purchasedNumbers = numbers.toString();
+                .collect(Collectors.toList());
     }
 }
